# django-backend-project

./: .gitignore  db.sqlite3  google_client.json  manage.py  pyproject.toml  readme.md
apps/accounts/: admin.py  models.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_alter_user_birth_date_alter_user_created_at.py  0002_alter_user_options_alter_user_managers_and_more.py  0003_alter_user_created_at.py  0003_rename_active_user_is_active_and_more.py  0004_remove_user_created_at.py  0004_rename_is_admin_user_is_verified_and_more.py  0005_alter_user_birth_date.py  0005_delete_user.py  0006_initial.py  0007_alter_user_birth_date_alter_user_is_freelancer.py  0007_remove_user_is_freelancer.py  0008_user_is_freelancer.py  0009_merge_20220814_0841.py
apps/api/: admin.py  serializers.py  urls.py  views.py
apps/courses/: admin.py  models.py  urls.py  video.py  views.py
apps/courses/migrations/: 0001_initial.py  0002_alter_course_created_at_alter_video_created_at.py  0002_course_rating.py  0003_alter_enroll_managers.py  0003_lesson_alter_course_created_at_and_more.py  0004_alter_enroll_options_alter_course_created_at_video.py  0004_choice_correct_alter_course_created_at_and_more.py  0005_alter_course_created_at_alter_video_created_at.py  0006_alter_course_created_at_alter_video_created_at.py  0007_alter_course_created_at_alter_video_created_at.py  0008_alter_course_created_at_alter_video_created_at.py  0009_alter_course_created_at_alter_video_created_at.py  (+3 more)
apps/freelanceshala/: admin.py  apps.py  models.py  urls.py  views.py
web/: settings.py  urls.py
(+2 files in other folders)
